# crewai_chat_ui

./: .gitignore  README.md  __init__.py  pyproject.toml  server.py
src/crewai_chat_ui/: __init__.py  chat_handler.py  crew_loader.py  event_listener.py  flow_api.py  flow_handler.py  flow_loader.py  server.py  telemetry.py  tool_loader.py
src/crewai_chat_ui/static/: flow-diagram.html  flows.html  flows.js  home.html  index.html  scripts.js  styles.css
src/crewai_chat_ui/tools/: example_tool.py  flow_loader.py
src/crewai_chat_ui/ui/: package-lock.json  package.json
src/crewai_chat_ui/ui/app/: app.css  root.tsx  routes.ts
src/crewai_chat_ui/ui/app/components/: CrewAgentCanvas.tsx  FlowCanvas.tsx  TraceSpanDetail.tsx  TraceSpanView.tsx  TraceTimeline.tsx  flow-node.css
src/crewai_chat_ui/ui/app/components/assistant-ui/: chat-sidebar.tsx  delete-chat-modal.tsx  markdown-text.tsx  thread-list.tsx  thread.tsx  tooltip-icon-button.tsx
src/crewai_chat_ui/ui/app/components/ui/: select.tsx  tabs.tsx
src/crewai_chat_ui/ui/app/lib/: store.ts
src/crewai_chat_ui/ui/app/routes/: CrewAIChatUIRuntimeProvider.tsx  assistant.tsx  chat.tsx  flow.traces.tsx  flow.tsx  home.tsx  index.tsx  kickoff.traces.tsx  kickoff.tsx  landing.tsx  tools.tsx
src/crewai_chat_ui/ui/app/routes/api/: flows.$flowId.initialize.tsx  flows.$flowId.traces.tsx  flows.tsx
static/: index.html  scripts.js  styles.css
