[build-system]
requires = ["setuptools>=61.0", "fastapi", "uvicorn", "pydantic"]
build-backend = "setuptools.build_meta"

[project]
name = "crewai-chat-ui"
version = "0.1.2"
authors = [{ name = "Lennex Zinyando", email = "brizdigital@gmail.com" }]
description = "Web UI for CrewAI chat functionality"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "crewai>=0.105.0",
  "click>=8.0.0",
  "fastapi>=0.109.0",
  "uvicorn>=0.27.0",
  "pydantic>=2.0.0",
]

[project.scripts]
crewai-chat-ui = "crewai_chat_ui.server:main"

[project.urls]
"Github" = "https://github.com/zinyando/crewai_chat_ui"
"Bug Tracker" = "https://github.com/zinyando/crewai_chat_ui/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["crewai_chat_ui*"]

[tool.setuptools.package-data]
crewai_chat_ui = ["static/*"]
