[build-system]
requires = ["setuptools>=61.0", "fastapi", "uvicorn", "pydantic"]
build-backend = "setuptools.build_meta"

[project]
name = "crewai-chat-ui"
version = "0.2.0"
authors = [{ name = "Lennex Zinyando", email = "brizdigital@gmail.com" }]
description = "Web UI for CrewAI chat functionality"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "crewai>=0.134.0",
  "click>=8.2.1",
  "fastapi>=0.115.14",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.7",
  "opentelemetry-api>=1.34.1",
  "opentelemetry-sdk>=1.34.1",
  "opentelemetry-exporter-otlp>=1.34.1",
  "opentelemetry-instrumentation",
]

[project.scripts]
crewai-chat-ui = "crewai_chat_ui.server:main"

[project.urls]
"Github" = "https://github.com/zinyando/crewai_chat_ui"
"Bug Tracker" = "https://github.com/zinyando/crewai_chat_ui/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["crewai_chat_ui*"]

[tool.setuptools.package-data]
crewai_chat_ui = ["static/*"]
